# ecp.egov66.ru-timetable

./: .gitignore  README.md  REUSE.toml  pyproject.toml
.forgejo/workflows/: docs.yml  test.yml
docs/: conf.py  contributing.rst  getting-started.rst  index.rst  reference.rst  showcase.rst  usage.rst
docs/api/: egov66_timetable.callbacks.html.rst  egov66_timetable.callbacks.sqlite.rst  egov66_timetable.client.rst  egov66_timetable.exceptions.rst  egov66_timetable.rst  egov66_timetable.types.livewire.rst  egov66_timetable.types.rst  egov66_timetable.types.settings.rst  egov66_timetable.utils.rst
egov66_timetable/: __init__.py  __main__.py  client.py  exceptions.py  types.py  utils.py
egov66_timetable/callbacks/: html.py
egov66_timetable/callbacks/sqlite/: __init__.py  schema.sql
egov66_timetable/templates/: teacher_week.html.jinja  week.html.jinja
egov66_timetable/types/: __init__.py  livewire.py  settings.py
src/: timetable.py
src/templates/: week.html.jinja
tests/: test_html.py  test_html_cases.py  test_main.py  test_types.py  test_utils.py
tests/data/: test_get_csrf_token.html  test_get_csrf_token_expired.html
