# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2025 Matvey Vyalkov

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ecp.egov66.ru-timetable"
authors = [
    {name = "Matvey Vyalkov"},
]
dynamic = ["version", "description"]
readme = "README.md"
license = "WTFPL"
license-files = ["LICENSES/*"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4[lxml]",
    "httpx",
    "jinja2",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3 :: Only",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Typing :: Typed",
]
keywords = ["college", "timetable"]

[dependency-groups]
test = [
    "pytest",
]
typecheck = [
    "mypy",
]
lint = [
    "bandit",
    "pycodestyle",
    "pyflakes",
    "reuse",
]

[project.urls]
Source = "https://altlinux.space/acme-corp/ecp.egov66.ru-timetable"

[project.scripts]
ecp-egov66-timetable = "egov66_timetable.__main__:main"

[tool.flit.module]
name = "egov66_timetable"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# requiring explicit types for all test methods would be cumbersome
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.bumpversion]
current_version = "0.0.0"
commit = true
tag = true
tag_name = "{new_version}"
sign_tags = true

[[tool.bumpversion.files]]
filename = "timetable.py"

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.12", "3.13", "3.14", "lint"]

[tool.tox.env_run_base]
description = "run the tests + mypy under {base_python}"
ignore_errors = true
dependency_groups = [
    "test",
    "typecheck",
]
commands = [
    #["pytest", "-vv", "{tty:--color=yes}"],
    ["mypy", "egov66_timetable"],
]

[tool.tox.env.lint]
description = "run the linters"
ignore_errors = true
skip_install = true
dependency_groups = ["lint"]
commands = [
    ["reuse", "lint"],
    ["pyflakes", "egov66_timetable"],
    ["pycodestyle", "egov66_timetable"],
    ["bandit", "-c", "pyproject.toml", "-r", "egov66_timetable"],
]
