# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2025 Matvey Vyalkov

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ecp.egov66.ru-timetable"
authors = [
    {name = "Matvey Vyalkov"},
]
dynamic = ["version", "description"]
readme = "README.md"
license = "EUPL-1.2"
license-files = ["LICENSES/*"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4[lxml]",
    "httpx",
    "iuliia",
    "jinja2",
    "pydantic>=2.7.0,<3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3 :: Only",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Typing :: Typed",
]
keywords = ["college", "timetable"]

[dependency-groups]
test = [
    "pytest",
    "pytest-cases",
]
typecheck = [
    "mypy",
]
lint = [
    "bandit",
    "pycodestyle",
    "pyflakes",
    "reuse",
]

[project.urls]
Source = "https://altlinux.space/acme-corp/ecp.egov66.ru-timetable"

[project.scripts]
ecp-egov66-timetable = "egov66_timetable.__main__:main"

[tool.flit.module]
name = "egov66_timetable"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.bandit]
skips = [
    "B101", # assert_used
    "B311", # random
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["iuliia.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
# requiring explicit types for all test methods would be cumbersome
disallow_untyped_defs = false
check_untyped_defs = true

[tool.bumpversion]
current_version = "0.0.0"
commit = true
tag = true
tag_name = "{new_version}"
sign_tags = false

[[tool.bumpversion.files]]
filename = "egov66_timetable/__init__.py"

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.12", "3.13", "3.14", "lint"]

[tool.tox.env_run_base]
description = "run the tests + mypy under {base_python}"
ignore_errors = true
dependency_groups = [
    "test",
    "typecheck",
]
commands = [
    ["pytest", "-vv", "{tty:--color=yes}"],
    ["mypy", "egov66_timetable", "tests"],
]

[tool.tox.env.lint]
description = "run the linters"
ignore_errors = true
skip_install = true
dependency_groups = ["lint"]
commands = [
    ["reuse", "lint"],
    ["pyflakes", "egov66_timetable", "tests"],
    ["pycodestyle", "egov66_timetable", "tests"],
    ["bandit", "-c", "pyproject.toml", "-r", "egov66_timetable"],
]
